--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,3 +27,13 @@ a {
   color: #007980;
   font-weight: bold;
 }
+
+.org_grid {
+  display: grid;
+  grid-template-columns: 200px 1fr 200px;
+  height: 100%;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
