style: remove arrow buttons for input type number

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -35,10 +35,22 @@ a {
 }
 
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
-.org_activeTab{
+.org_activeTab {
   color: azure;
   background-color: rgb(14 116 144 / var(--tw-bg-opacity));
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
 }
